Simplify build code that was previously only enabled if Java 8 or higher were being used